fix: [CDP-19556]: fixed the ux of save button on terraform var  wizard (#6167)
* fix: [CDP-19556]: fixed the ux of overlapping of savebtn

* fix: [CDP-19556]: fixed the ux of overlapping of savebtn

--- a/src/modules/75-cd/components/PipelineSteps/Common/Terraform/Editview/TerraformVarfile.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/Common/Terraform/Editview/TerraformVarfile.module.scss
@@ -155,10 +155,6 @@
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
   margin-bottom: var(--spacing-small);
 }
-.saveBtn {
-  position: absolute;
-  bottom: 0;
-}
 
 .tfVarStore {
   padding: var(--spacing-small) 0 0 var(--spacing-small) !important;
